--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/csharp.png" alt="">
+            <img src="./images/csharp.png" alt="">
             <h3> C# Projects </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/C-BiggerProjects" target="_blank" class="fas fa-link"></a>
@@ -326,7 +326,7 @@
         </div>
 
         <div class="box">
-            <img src="images/jav.png" alt="">
+            <img src="./images/jav.png" alt="">
             <h3> Java Projects </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Java-Projects" target="_blank" class="fas fa-link"></a>
@@ -335,7 +335,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/js.png" alt="">
+            <img src="./images/js.png" alt="">
             <h3> JS Projects </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Js-projects" target="_blank" class="fas fa-link"></a>
@@ -344,7 +344,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/java.png" alt="">
+            <img src="./images/java.png" alt="">
             <h3> <a href="java.html"> Java Bibliotheek APP </a></h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Java-Projects/tree/main/Bibliotheek" target="_blank" class="fas fa-link"></a>
@@ -354,7 +354,7 @@
         </div>
 
         <div class="box">
-            <img src="images/c1.PNG" alt="">
+            <img src="./images/c1.PNG" alt="">
             <h3><a href="csharp.html">.Net Project APP </a> </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/C-BiggerProjects/tree/main/AdressbeheerV2" target="_blank" class="fas fa-link"></a>
@@ -364,7 +364,7 @@
         </div>
 
         <div class="box">
-            <img src="images/prt.gif" alt="">
+            <img src="./images/prt.gif" alt="">
             <h3><a href="assets/Particles/index.html"> Particles</a></h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Js-projects/tree/main/Particles" target="_blank" class="fas fa-link"></a>
@@ -374,17 +374,17 @@
         </div>
 
         <div class="box">
-            <img src="images/ss.PNG" alt="">
-            <h3> <a href="assets/bubblepopper/index.html" target="_blank">Pop Bubble</h3>
+            <img src="./images/ss.PNG" alt="">
+            <h3> <a href="assets/bubblepopper/index.html" target="_blank">Pop Bubble </a></h3>
             <div class="icons">
-                <a href="https://github.com/AliMa3s/Js-projects/tree/main/BubblePopper" target="_blank" class="fas fa-link"></a>
+                <a href="#"  class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-search"></a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/java2.png" alt="">
+            <img src="./images/java2.png" alt="">
             <h3> Java Project JPA </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Java-Projects/tree/main/JavaPersistenceApi" target="_blank" class="fas fa-link"></a>
@@ -394,7 +394,7 @@
         </div>
 
         <div class="box">
-            <img src="images/mic.jpeg" alt="">
+            <img src="./images/mic.jpeg" alt="">
             <h3> Voice Commands C# </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Projects" target="_blank" class="fas fa-link"></a>
