--- a/java.html
+++ b/java.html
@@ -65,16 +65,16 @@
 
 		<h5>Biotheek Applicatie</h5>
 		<div class="img-container">
-			<a href="images/java2.png"><img src="images/java2.png"></a>
+			<a href="./images/java2.png"><img src="./images/java2.png"></a>
 		</div>
 
 		<h6>Biotheek screenshots</h5>
 		<div class="img-container">
-			<a href="images/java3.png"><img src="images/java3.png"></a>
+			<a href="./images/java3.png"><img src="./images/java3.png"></a>
 		</div>
 		<h6>Biotheek screenshots</h5>
 		<div class="img-container">
-			<a href="images/java.png"><img src="images/java.png"></a>
+			<a href="./images/java.png"><img src="./images/java.png"></a>
 		</div>
 		
 	</div>
