--- a/csharp.html
+++ b/csharp.html
@@ -70,23 +70,23 @@
 
 		<h5>AdressenBeheer Applicatie Applicatie</h5>
 		<div class="img-container">
-			<a href="images/c1.png"><img src="images/c1.png"></a>
+			<a href="./images/c1.png"><img src="./images/c1.png"></a>
 		</div>
 
 		<h6>AdressenBeheer Applicatie screenshots</h5>
 		<div class="img-container">
-			<a href="images/c2.png"><img src="images/c2.png"></a>
+			<a href="./images/c2.png"><img src="./images/c2.png"></a>
 		</div>
 		<h6>AdressenBeheer Applicatie screenshots</h5>
 		<div class="img-container">
-			<a href="images/c3.png"><img src="images/c3.png"></a>
+			<a href="./images/c3.png"><img src="./images/c3.png"></a>
 		</div>
 		<h6>AdressenBeheer Applicatie screenshots</h5>
 			<div class="img-container">
-				<a href="images/c4.png"><img src="images/c4.png"></a>
+				<a href="./images/c4.png"><img src="./images/c4.png"></a>
 			</div><h6>AdressenBeheer Applicatie screenshots</h5>
 				<div class="img-container">
-					<a href="images/c5.png"><img src="images/c5.png"></a>
+					<a href="./images/c5.png"><img src="./images/c5.png"></a>
 				</div>
 	</div>
 
