--- a/java.html
+++ b/java.html
@@ -70,7 +70,7 @@
 
 		<h6>Biotheek screenshots</h5>
 		<div class="img-container">
-			<a href="./images/java3.png"><img src="./images/java3.png"></a>
+			<a href="./images/java3.PNG"><img src="./images/java3.PNG"></a>
 		</div>
 		<h6>Biotheek screenshots</h5>
 		<div class="img-container">
