--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </div>
         <div class="box">
             <img src="./images/java.png" alt="">
-            <h3> <a href="java.html"> Java Bibliotheek APP </a></h3>
+            <h3> <a href="java.html" target="_blank"> Java Bibliotheek APP </a></h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Java-Projects/tree/main/Bibliotheek" target="_blank" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -355,7 +355,7 @@
 
         <div class="box">
             <img src="./images/c1.PNG" alt="">
-            <h3><a href="csharp.html">.Net Project APP </a> </h3>
+            <h3><a href="csharp.html" target="_blank">.Net Project APP </a> </h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/C-BiggerProjects/tree/main/AdressbeheerV2" target="_blank" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -365,7 +365,7 @@
 
         <div class="box">
             <img src="./images/prt.gif" alt="">
-            <h3><a href="assets/Particles/index.html"> Particles</a></h3>
+            <h3><a href="assets/Particles/index.html" target="_blank"> Particles</a></h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Js-projects/tree/main/Particles" target="_blank" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
