--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p> <span> Land : </span> Belgie </p>
             </div>
         </div>
-        <a href="images/CvMaesAli.pdf" target="_blank" class="btn">download CV</a>
+        <a href="images/CVMaesAli.pdf" target="_blank" class="btn">download CV</a>
         <a href="mailto: ali.maes@outlook.com" class="btn">hire me</a>
     </div>
 
