--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </div>
         <div class="box">
             <img src="./images/java.png" alt="">
-            <h3> <a href="java.html" target="_blank"> Java Bibliotheek APP </a></h3>
+            <h3> <a href="./java.html" target="_blank"> Java Bibliotheek APP </a></h3>
             <div class="icons">
                 <a href="https://github.com/AliMa3s/Java-Projects/tree/main/Bibliotheek" target="_blank" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
