--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
     <div class="content">
         <h3> Meer over mij </h3>
-        <p>Ik ben een gemotiveerd persoon met een grote hart voor technologie en software development.
+        <p>Ik ben een gemotiveerd persoon met een grote hart voor technologie en software development.<br>
 
-            Ik werk graag met Object-Oriented Programming languages, met een grote voorkeur voor C# en Java. Ik kan goed in teamverband werken en vind het belangrijk dat er een goede onderlinge communicatie plaatsvindt.
+            Ik werk graag met Object-Oriented Programming languages, met een grote voorkeur voor C# en Java. Ik kan goed in teamverband werken en vind het belangrijk dat er een goede onderlinge communicatie plaatsvindt.<br>
             
             Voor meer info mag u mij mailen op ali.maes@outlook.com of via telefoon.</p>
         <div class="box-container">
@@ -188,7 +188,7 @@
         <div class="box">
             <i class="fas fa-code"></i>
             <h3>Development</h3>
-            <p>Software Ontwikkeling in .NET en Java doe ik graag daarbij kan ik ook werken 
+            <p>Software Ontwikkeling in .NET en Java doe ik graag, daarbij kan ik ook werken 
                 in Javascript in beperkte maat. 
             </p>
         </div>
@@ -196,7 +196,7 @@
         <div class="box">
             <i class="fas fa-paint-brush"></i>
             <h3>Web development</h3>
-            <p>Naast programmeren op mijn vrije tijd, maak ik vaak websites zodat
+            <p>Naast programmeren in mijn vrije tijd, maak ik vaak websites zodat
                 ik nieuwe technologien kan proberen.
             </p>
         </div>
@@ -204,7 +204,7 @@
         <div class="box">
             <i class="fas fa-mobile"></i>
             <h3>Mobile development</h3>
-            <p>Dit is de volgende doel. Na dat ik met mijn studies klaar ben kan ik u 
+            <p>Dit is het volgende doel. Nadat ik met mijn studies klaar ben kan ik u 
                 helpen met Mobile Apps.
             </p>
         </div>
@@ -212,15 +212,17 @@
         <div class="box">
             <i class="fas fa-bullhorn"></i>
             <h3>Opzoek naar Stage</h3>
-            <p>Ik ben momenteel opzoek naar een stage plaats. Als u een gemotiveerd werknemer 
-                in de toekomst wil, arzel niet mij te contacteren. :)
+            <p>Ik ben momenteel opzoek naar een stageplaats. Als u een gemotiveerd werknemer 
+                in de toekomst wil, aarzel niet mij te contacteren. :)
             </p>
         </div>
 
         <div class="box">
             <i class="fas fa-users"></i>
             <h3> Open Source</h3>
-            <p>Heb je Open Source Project? Laat mij iets weten misschien help ik ook met iets mee.</p>
+            <p>Heb je Open Source Project? Laat mij iets weten misschien kan ik ook met iets helpen.
+
+ </p>
         </div>
 
         <div class="box">
@@ -247,7 +249,7 @@
             <div class="content">
                 <span> 2020 - 2022 </span>
                 <h3>Graduaat programmeren (Hogeschool Gent)</h3>
-                <p>Na het stoppen van werk heb ik meteen mij ingeschreven voor Graduaat Programmeren.
+                <p>Na het stoppen van mijn vorig werk, heb ik meteen mij ingeschreven voor Graduaat Programmeren.
                     Programmeren is mijn droom job!
                 </p>
             </div>
@@ -257,8 +259,9 @@
             <div class="content">
                 <span> 2019 - 2020 </span>
                 <h3>ICT Programmeren (CVO groeipunt) Secundair Diploma</h3>
-                <p>Ik ben momenteel bezig met laatste semester van mijn secudair diploma van avond onderwijs.
-                    Als diploma gerichtige opleiding heb ik gekozen voor ICT-Programmeren. <b>Java-Python </b></p>
+                <p>Ik ben momenteel bezig met laatste semester van mijn secundair diploma van avondonderwijs.
+                    Als diploma gerichte opleiding heb ik gekozen voor ICT-Programmeren.
+ <b>Java-Python </b></p>
 
             </div>
         </div>
@@ -268,8 +271,8 @@
                 <span> 2016 - 2020 </span>
                 <h3>Innoceal bvba</h3>
                 <p>Ik heb gewerkt als arbeider in de functie lucht en waterdichting van gebouwen bij Innoceal. Ik 
-                    moest ook mijn andere collega’s helpen het 
-                    leren zelfstandig werken en eventueel opleiden 
+                    moest ook mijn andere collega’s helpen om 
+                    zelfstandig te leren werken en hen eventueel opleiden 
                     met nieuwe producten.<p>
             </div>
         </div>
@@ -278,8 +281,9 @@
             <div class="content">
                 <span> 2013 - 2016 </span>
                 <h3>Hevadex Application</h3>
-                <p>Ik heb in deze firma als arbeider begonnen. en onze taak waren lucht en waterdichting
-                    van gebouwen. Naast dit heb ik veel van mijn collega's opgeleid.
+                <p>Ik ben in deze firma als arbeider begonnen. Onze taak was lucht- en waterdichting
+                    van gebouwen. Daarnaast heb ik veel van mijn collega's opgeleid.
+
                 </p>
             </div>
         </div>
@@ -288,7 +292,7 @@
             <div class="content">
                 <span> 2009 - 2013 </span>
                 <h3>Diverse Jobs</h3>
-                <p>In dit periode heb ik diverse jobs gedaan vooral tijdlijke contracten en interim jobs enz..</p>
+                <p>In deze periode heb ik diverse jobs gedaan vooral tijdelijke contracten en interim jobs enz..</p>
             </div>
         </div>
 
@@ -296,8 +300,8 @@
             <div class="content">
                 <span> 2007 - 2009 </span>
                 <h3>Grafisch Technieken</h3>
-                <p>Diploma van drukafwerker en drukvoorbereider gehaald, door de crisis kon ik niet aan werk geraken.
-                     daarom naar andere sectoren gegaan werken.</p>
+                <p>Ik heb het diploma van drukafwerker en drukvoorbereider gehaald, door de crisis kon ik niet aan werk geraken.
+                     daarom ben ik in andere sectoren gaan werken.</p>
             </div>
         </div>
 
@@ -312,7 +316,7 @@
 <section class="portfolio" id="portfolio">
 
     <h1 class="heading"> <span> Some </span> Projects </h1>
-    <h3>Note: Sommige projecten kan je op naam klikken voor meer informatie over het project.</h3>
+    <h3>Note: Bij sommige projecten kan je op naam klikken voor meer informatie over het project.</h3>
     <div class="box-container">
 
         <div class="box">
@@ -444,8 +448,9 @@
     <div class="row">
 
         <form action="https://formsubmit.co/ali.maes@aol.com" method="post">
-            <h2>Gebruik aub de link *email* van boven. Deze form werkt, maar heb liever dat u mijn
-                rechtstreeks via mail contacteert. Bedankt voor u bezoek!
+            <h2>Gebruik aub de link *email* die u bovenaan kan vinden. U kan mij eventueel ook 
+                rechtstreeks via mijn mail contacteren. Bedankt voor u bezoek!
+
             </h2>
             <input type="text" placeholder="name" class="box">
             <input type="email" placeholder="email" class="box">
