--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <a href="#" class="logo"> <span>Maes</span> Ali </a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#about">about</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
         <a href="#service">Experties</a>
-        <a href="#experience">experience</a>
-        <a href="#portfolio">portfolio</a>
-        <a href="#contact">contact</a>
+        <a href="#experience">Experience</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <div class="follow">
