--- a/csharp.html
+++ b/csharp.html
@@ -43,22 +43,26 @@
 		
 		<h3>AdresBeheer Applicatie Gemaakt in C#</h3>
 
-		<p>Dit is een school project waar ik moest een AdresBeheer applicatie bouwen.
+		<p>Dit is een school project waar ik een AdresBeheer applicatie moest bouwen.
 		<br>
 		<br>
-		In deze applicatie wordt de data gelezen van een gml file met logica als backend 
+		In deze applicatie wordt de data gelezen van een gml file met logica als backend
+		
+
 		<br> en achteraf al die data wordt verstuurd naar de databank.
 		<br>
 		<br>
-		In deze applicatie kan men adressen,gemeente,straat toevoegen, verwijderen en updaten.
-		<br>Daarnast er zijn ook unittesten geschereven
+		In deze applicatie kan men adressen, gemeente, ,straat toevoegen, verwijderen en updaten.
+		<br>Daarnaast er zijn ook unittesten geschereven
 		<br>
 		<br>
-		Daarnast voor het gemaak van user is er een user interface gemaakt waarin kan een user met 
-		<br> bijna geen informatica achtergrond een adres kan gemakkelijk wijzigen.
+		Daarnaast is er voor het gemak van de gebruiker een userinterface gemaakt waarin een gebruiker met
+
+
+		<br> weinig informatica-achtergrond een adres gemakkelijk kan wijzigen.
 		<br>
 		<br>
-		Een totaal overzicht van alle adressen worden ook getoond via sql-server verbinden met databank in realtime.
+		Een totaal overzicht van alle adressen worden ook getoond door de sql-server te verbinden met de databank in realtime.
 	<br> <br> Voor meer info bezoek mijn github aub.</p>
 
 		<h5>Technologies:</h5>
