--- a/java.html
+++ b/java.html
@@ -39,22 +39,24 @@
 
 		
 		
-		<h1>Bibliotheek lenen van boeken en terugbrengen Gemaakt in Java</h1>
+		<h1>Bibliotheek lenen van boeken en terugbrengen, gemaakt in Java</h1>
 
-		<p>Dit is een school project waar ik moest een bibliotheek applicatie maken.
+		<p>Dit is een schoolproject waarin ik een bibliotheekapplicatie moest maken.
 		<br>
 		<br>
-		In deze applicatie kan je een boek lenen en uitgeven en de data word opgeslaan in Sql databank.
-		<br>Daarnast heb je ook toegang tot alle leden met hun informatie.
+		In deze applicatie kan je een boek lenen en teruggeven, de data word opgeslaan in Sql databank.
+
+
+		<br>Daarnaast heb je ook toegang tot alle leden met hun informatie.
 		<br>
 		<br>
-		De informatie wijziging gebeurt in realtime met SQL-Server. en word getoond in realtime in de applicatie.
+		De informatiewijziging gebeurt in realtime met SQL-Server en wordt in realtime getoondin de applicatie.
 		<br>
 		<br>
-		Men kan een leden selecteren en de gewenste boek uitlenen en of teruggebrachte boek in geven.
+		Men kan leden selecteren en de gewenste boeken uitlenen of teruggebrachte boeken ingeven.
 		<br>
 		<br>
-		Een totaal overzicht van alle leningen worden ook getoond via sql-server verbinden met databank.</p>
+		Een totaal overzicht van alle leningen worden ook getoond door de sql-server te verbinden met de databank.</p>
 		<br> <br> Voor meer info bezoek mijn github aub.</p>
 		<h5>Technologies:</h5>
 		<ul>
