--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#service">Experties</a>
+        <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
