--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#service">Experties</a>
+        <a href="#service">Expertise</a>
         <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
         <a href="#portfolio">Portfolio</a>
@@ -182,7 +182,7 @@
 
 <section class="service" id="service">
 
-<h1 class="heading"> <span> my </span> Experties </h1>
+<h1 class="heading"> <span> my </span> Expertise </h1>
 
     <div class="box-container">
 
@@ -418,7 +418,7 @@
 
 <section class="contact" id="contact">
 
-    <h1 class="heading"> contact <span> Mij </span> </h1>
+    <h1 class="heading"> MY <span> CONTACT </span> </h1>
 
     <div class="icons-container">
 
