--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 </div>
 
-<h1 class="heading"> <span> my </span> skills </h1>
+<h1 class="heading" id="skills"> <span> my </span> skills </h1>
 
 <div class="row-2">
 
