--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <i class="fas fa-paint-brush"></i>
             <h3>Web development</h3>
             <p>Naast programmeren in mijn vrije tijd, maak ik vaak websites zodat
-                ik nieuwe technologien kan proberen.
+                ik nieuwe technologieën kan proberen.
             </p>
         </div>
 
