--- a/csharp.html
+++ b/csharp.html
@@ -52,7 +52,7 @@
 		<br> en achteraf al die data wordt verstuurd naar de databank.
 		<br>
 		<br>
-		In deze applicatie kan men adressen, gemeente, ,straat toevoegen, verwijderen en updaten.
+		In deze applicatie kan men adressen, gemeente, straat toevoegen, verwijderen en updaten.
 		<br>Daarnaast er zijn ook unittesten geschereven
 		<br>
 		<br>
