--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
             <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
 
-            <input type="submit" class="btn" value="send message">
+            <button type="submit" class="btn" value="send message">
 
         </form>
 
