--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <span class="hi"> Hi there... </span>
         <h3> Ik ben <span> Maes Ali </span> </h3>
         <p class="info"> Developer met primaire focus op .Net, Java en Webdevelopment</p>
-        <p class="text"> Gepassioneerd door .Net, Java, JavaScript en Webdevelopment en momeenteel Student bij HoGent. </p>
+        <p class="text"> Gepassioneerd door .Net, Java, JavaScript en Webdevelopment en momenteel Student bij HoGent. </p>
         <a href="#about" class="btn">about me</a>
     </div>
 
