--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div id="menu-bars" class="fas fa-bars"></div>
     
-<!-- header section starts  -->
+<!-- header section starts testing  -->
 
 <header>
 
