--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <h3>Stage (Avanade Belgium)</h3>
             <p>
               Ik heb een stage gehad bij Avanade als Software Engineer, Hier
-              moesten we met technologieën zoals (Azure, Azure DevOps, .Net 6,
+              moesten we met technologieën zoals (Azure, Azure DevOps, .Net 6,IOT,
               React met Typscript) werken. Als cloud platform hebben we Azure
               Resources gebruikt. Api was gemaakt in .Net 6 met
               Entity-Framework. De front-end was gemaakt met React + typescript
