React-native-page-> Not complete

--- a/index.html
+++ b/index.html
@@ -359,6 +359,43 @@
         over het project.
       </h3>
       <div class="box-container">
+
+        <div class="box">
+          <img src="./images/reactweb2.png" alt="" />
+          <h3>            <a
+              href="https://alima3s.github.io/reactweb2/"
+              target="_blank"
+              class="fas fa-link"
+            > React Web</a></h3>
+          <div class="icons">
+            <a
+              href="#"
+              target="_blank"
+              class="fas fa-link"
+            ></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="./images/nativeimgs/thumbnail.png" alt="" />
+          <h3>            <a
+              href="reactnative.html"
+              target="_blank"
+              class="fas fa-link"
+            > React Native App</a></h3>
+          <div class="icons">
+            <a
+              href="#"
+              target="_blank"
+              class="fas fa-link"
+            ></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+
         <div class="box">
           <img src="./images/csharp.png" alt="" />
           <h3>            <a
