Complete native page

--- a/reactnative.html
+++ b/reactnative.html
@@ -21,23 +21,36 @@
     <div>
       <ul>
         <li>
-          <span>About</span>
+          <span>Login screen</span>
           <img src="./images/nativeimgs/rn1.png" />
         </li>
 
         <li>
-          <span>Voeg Meetups</span>
+          <span>Register screen</span>
           <img src="./images/nativeimgs/rn2.png" />
         </li>
 
         <li>
-          <span>Hoofdpagina</span>
+          <span>Home Page</span>
           <img src="./images/nativeimgs/rn3.png" />
         </li>
 
         <li>
-          <span>Melding</span>
+          <span>Meetups Details</span>
           <img src="./images/nativeimgs/rn4.png" />
+        </li>
+                <li>
+          <span>About Pagina</span>
+          <img src="./images/nativeimgs/rn5.png" />
+        </li>
+
+        <li>
+          <span>New meetup</span>
+          <img src="./images/nativeimgs/rn6.png" />
+        </li>
+                <li>
+          <span>Navigation</span>
+          <img src="./images/nativeimgs/rn7.png" />
         </li>
       </ul>
     </div>
